--- a/lol.html
+++ b/lol.html
@@ -6,11 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <p><a href="html/insertSuppliers">insertaadddddddddddddaaaaaaaaaSuafasdfasfppliers</a></p>
-=======
-    <p><a href="html/insertSuppliers">insertaadddddddddddddaaaaaaaaaSuafasdfasfppliers</a></p>
->>>>>>> 9ff6698baa16bb680b3b5248812d8f711f2b372d
+    <p><a href="html/insertSuppliers">dm</a></p>
     private int employeeID;
     private String lastName;
     private String firstName;
