--- a/lol.html
+++ b/lol.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p><a href="html/insertSuppliers">dmmmmmmmmm</a></p>
+    <p><a href="html/insertSuppliers">dmmmmmmmmmlollllll</a></p>
     private int employeeID;
     private String lastName;
     private String firstName;
